--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -1,44 +1,46 @@
+<!-- views/reviews-new.handlebars -->
+
 <form method="POST" action="/reviews">
-  <fieldset>
-    <legend>New Review</legend>
-    <!-- TITLE -->
-    <p>
-      <label for="review-title">Title</label><br>
-      <input id="review-title" type="text" name="title" />
+    <fieldset>
+        <legend>New Review</legend>
+        <!-- TITLE -->
+        <p>
+            <label for="review-title">Title</label><br>
+            <input id="review-title" type="text" name="title" />
     </p>
 
-    <!-- MOVIE TITLE -->
-    <p>
-      <label for="movie-title">Movie Title</label><br>
-      <input id="movie-title" type="text" name="movieTitle" />
+            <!-- MOVIE TITLE -->
+            <p>
+                <label for="movie-title">Movie Title</label><br>
+                <input id="movie-title" type="text" name="movieTitle" />
     </p>
 
-    <!-- DESCRIPTION -->
+                <!-- DESCRIPTION -->
+                <p>
+                    <label for="description-text">Description</label><br>
+                    <textarea id="description-text" name="description" rows="10" /></textarea>
+                </p>
+
+                <!-- RATINGS -->
+                <p>
+                    <label for="ratings-movie">Movie Rating</label><br>
+                    <select>
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </p>
+    </fieldset>
+
+
+
+
+    <!-- BUTTON -->
     <p>
-      <label for="description-text">Description</label><br>
-      <textarea id="description-text" name="description" rows="10" /></textarea>
+        <button type="submit">Save Review</button>
     </p>
-
-    <!-- RATINGS -->
-    <p>
-    <label for="ratings-movie">Movie Rating</label><br>
-    <select>
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-   </select>
-    </p>
-  </fieldset>
-
-
-
-
-  <!-- BUTTON -->
-  <p>
-    <button type="submit">Save Review</button>
-  </p>
 
 </form>
