Users can destroy reviews

--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -5,5 +5,8 @@
   <p>
     <button type="submit">Save Review</button>
   </p>
+  <p>
+    <input class="button" type="button" onclick="window.location.replace('http://localhost:3000')" value="Cancel" />  
+  </p>
 
 </form>
