--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,21 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Rotten Potatoes</title>
-</head>
-<body>
 
-  {{{body}}}
+<head>
+    <meta charset="utf-8">
+    <title>Rotten Potatoes</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+</head>
+
+<body>
+<div class="container">
+    {{{body}}}
+</div>
+
+    {{> navbar}}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
