--- a/views/reviews-index.handlebars
+++ b/views/reviews-index.handlebars
@@ -2,8 +2,12 @@
 
 <a href="/reviews/new">New Review</a>
 
+<div class="row">
 
-{{#each reviews}}
-  <h2><a href="/reviews/{{this._id}}">{{this.title}}</a></h2>
-  <small>{{this.movieTitle}}</small>
-{{/each}}
+    {{#each reviews}}
+        <div class="col-sm-3">
+            <h2><a href="/reviews/{{this._id}}">{{this.title}}</a></h2>
+            <small>{{this.movieTitle}}</small>
+        </div>
+    {{/each}}
+</div>
