--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -1,12 +1,14 @@
 <form method="POST" action="/reviews">
-  {{> reviews-form}}
-
-  <!-- BUTTON -->
-  <p>
-    <button type="submit">Save Review</button>
-  </p>
-  <p>
-    <input class="button" type="button" onclick="window.location.replace('http://localhost:3000')" value="Cancel" />  
-  </p>
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <form method="POST" action="/reviews">
+                {{> reviews-form}}
+                <!-- BUTTON -->
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">Save Review</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
 </form>
