Users can now see review

--- a/views/partials/reviews-form.handlebars
+++ b/views/partials/reviews-form.handlebars
@@ -18,7 +18,7 @@
                 <textarea class="form-control" id="review-description" name="description" rows="10" />{{review.description}}</textarea>
             </div>
 
-            <!-- RATINGS -->
+            <!-- RATINGS
             <p>
                 <label for="ratings-movie">Movie Rating</label><br>
                 <select>
@@ -29,6 +29,6 @@
           <option value="4">4</option>
           <option value="5">5</option>
       </select>
-            </p>
+  </p> -->
 
 </fieldset>
