--- a/views/reviews-show.handlebars
+++ b/views/reviews-show.handlebars
@@ -10,5 +10,9 @@
                 <button class="btn btn-primary" type="submit">Delete</button>
             </form>
         </p>
+        <hr>
+
+    <!-- Comment form -->
+    {{> comment-form}}
     </div>
 </div>
