--- a/views/reviews-show.handlebars
+++ b/views/reviews-show.handlebars
@@ -10,9 +10,16 @@
                 <button class="btn btn-primary" type="submit">Delete</button>
             </form>
         </p>
+
+        <!-- Comment form -->
+        {{> comment-form}}
+
         <hr>
 
-    <!-- Comment form -->
-    {{> comment-form}}
+        <!-- Show Comments -->
+        {{#each comments}}
+            {{> comment}}
+        {{/each}}
+
     </div>
 </div>
