--- a/views/movies-index.handlebars
+++ b/views/movies-index.handlebars
@@ -5,7 +5,7 @@
     <div class="movie-poster">
     <a href="/movies/{{this.id}}" class="thumbnail">
     <li>{{this.title}}
-    <img src="https://image.tmdb.org/t/p/w200{{this.poster_path}}"></a>    </li>
+    <img src="https://rickandmortyapi.com/api/character/avatar/{{this.image}}"></a>    </li>
     </a>
     </div>
     {{/each}}
